add frontend module, update security filter chain
- implement status codes response for api calls way cleaner than @order
- setup basic UI to test auth, CSRF, and login/logout

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,6 @@ spring:
         provider:
           keycloak:
             issuer-uri: http://localhost:8081/realms/training-app
+
+server:
+  forward-headers-strategy: framework
